--- a/source/index.html
+++ b/source/index.html
@@ -22,6 +22,9 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+	<script src="https://maps.google.com/maps/api/js?v=3&sensor=false" type="text/javascript"></script>
+	<script src="assets/js/markerwithlabel.js"></script>
+
 </head>
 <body onload="initialize()">
 
@@ -182,9 +185,6 @@ if($stunde >="5" AND $stunde <"12"){
     	<div class="row">
         	<div class="col-md-12">
             	<!-- google maps -->
-                <script type="text/javascript">
-					
-				</script>
 				<div id="tripmap" style="width: 100%; height: 260px;"></div>
                 <!-- /google maps -->
             </div>
@@ -197,7 +197,6 @@ if($stunde >="5" AND $stunde <"12"){
 <script src="assets/js/jquery-1.11.3.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
 <script src="assets/js/jquery.simpleWeather.min.js"></script>
-<script src="https://maps.google.com/maps/api/js?v=3&sensor=false" type="text/javascript"></script>
 <script src="assets/js/script.js"></script>
 
 </body>
