--- a/source/index.html
+++ b/source/index.html
@@ -22,9 +22,6 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-	<script src="https://maps.google.com/maps/api/js?v=3&sensor=false" type="text/javascript"></script>
-	<script src="assets/js/markerwithlabel.js"></script>
-
 </head>
 <body onload="initialize()">
 
@@ -181,11 +178,11 @@ if($stunde >="5" AND $stunde <"12"){
 
 <!-- map -->
 <section id="map">
-	<div class="container">
+	<div class="container-fluid">
     	<div class="row">
-        	<div class="col-md-12">
+        	<div class="col-xs-12">
             	<!-- google maps -->
-				<div id="tripmap" style="width: 100%; height: 260px;"></div>
+				<div id="tripmap"></div>
                 <!-- /google maps -->
             </div>
         </div>
@@ -197,6 +194,8 @@ if($stunde >="5" AND $stunde <"12"){
 <script src="assets/js/jquery-1.11.3.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
 <script src="assets/js/jquery.simpleWeather.min.js"></script>
+<script src="https://maps.google.com/maps/api/js?v=3&sensor=false" type="text/javascript"></script>
+<script src="assets/js/markerwithlabel.js"></script>
 <script src="assets/js/script.js"></script>
 
 </body>
