--- a/source/index.html
+++ b/source/index.html
@@ -85,10 +85,12 @@ if($stunde >="5" AND $stunde <"12"){
 
 <!-- hero -->
 <header>
-	<div class="container">
+	<div class="container-fluid keyvisual">
     	<div class="row">
         	<div class="col-xs-12">
-            	<img src="images/hero/ansicht_abend.jpg" class="img-responsive">
+            	<div id="keyvisual-element">
+					<div class="keyvisualsteadyhalf"></div>
+				</div>
             </div>
         </div>
     </div>
@@ -100,7 +102,83 @@ if($stunde >="5" AND $stunde <"12"){
 	<div class="container">
     	<div class="row">
         	<div class="col-md-4">
-            	asdf
+            	<img src="images/articles/newsletter-duo_on_ipad.jpg" class="img-responsive">
+            </div>
+            <div class="col-md-8">
+            	<h1>Schnäppchen und Last-Minute-Angebote</h1>
+                <p class="lead">In regelmäßigen Abständen informieren wir Sie per E-Mail über aktuelle Angebote, Last-Minute-Aufenthalte und interessante Veränderungen bei den MORADA HOTELS & RESORTS.</p>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- /apps -->
+
+<!-- kuebomare -->
+<section id="kuebomare">
+	<div class="container">
+    	<div class="row">
+        	<div class="col-md-6">
+            	<h1>Besuchen Sie unsere Wellnesswelt im Strandhotel.</h1>
+                <p class="lead">Sie wollen neue Kraft tanken, sich verwöhnen lassen, Körper und Seele eine Auszeit gönnen? Auf großzügigen 3.000 m² haben Sie in unserem Strandhotel auf vielfältige Art und Weise Gelegenheit dazu: Entdecken Sie unsere einmalige MORADA Wellnesswelt mit einer abwechslungsreichen Saunalandschaft, einem modernen Fitnessbereich, lassen Sie sich im Báltico Spa mit Massagen und Beautyanwendungen verwöhnen oder tauchen Sie in unserer Meerwasserwelt in echtes Ostseewasser ein – einzigartig in ganz Kühlungsborn!</p>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- /kuebomare -->
+
+<!-- appetizer -->
+<section id="appetizer">
+	<div class="container">
+    	<div class="row">
+        	<div class="col-md-4">
+            	<div class="carditem">
+                	<img src="images/contentslider/meerwasserschwimmbecken.jpg" class="img-responsive">
+                	<div class="carditem-body">
+                        <h4>Unsere Meerwasserwelt – Das Herzstück unseres Wellnessbereichs</h4>
+                        <p>Schwimmen in der Ostsee – indoor und bei jedem Wetter! Als einziges Hotel in ganz Kühlungsborn bieten wir Ihnen mit unserem einzigartigen KÜBOMARE ein Badeerlebnis der Extraklasse. In einem aufwändigen Filterverfahren wird unser Becken mit echtem Ostseewasser gespeist.</p>
+                    </div>
+                    <hr>
+                    <div class="carditem-footer">
+                    	<a href="#" title="title" target="_blank">Mehr Informationen <i class="fa fa-chevron-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        	<div class="col-md-4">
+            	<div class="carditem">
+                	<img src="images/contentslider/kelo-erdsauna.jpg" class="img-responsive">
+                	<div class="carditem-body">
+                        <h4>Unsere Saunawelt - Entspannung pur im KÜBOMARE</h4>
+                        <p>Mit dem KÜBOMARE bieten wir Ihnen eine einzigartige Wellnessoase: Sieben verschiedene Saunen – fünf im Innen- und weitere zwei im Außenbereich – sorgen für optimale Entspannung und Ruhe. Gönnen Sie Ihrem Körper und ihrer Seele eine Auszeit. An unserer Saunabar können Sie sich zudem erfrischen.</p>
+                    </div>
+                    <hr>
+                    <div class="carditem-footer">
+                    	<a href="#" title="title" target="_blank">Mehr Informationen <i class="fa fa-chevron-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+            	<div class="carditem">
+                	<img src="images/articles/kuebomare_massage.jpg" class="img-responsive">
+                	<div class="carditem-body">
+                        <h4>Unser Báltico Spa - Lassen Sie sich professionell verwöhnen</h4>
+                        <p>Was wäre ein Wellness Hotel ohne Massagen und Beautyanwendungen? In unserem Báltico Spa stehen Ihnen professionelle Kosmetikerinnen und Masseure für vielfältige Entspannungsbehandlungen zur Verfügung. Genießen Sie in angenehmer Atmosphäre zu sanften Klängen ein umfangreiches Verwöhn- und Schönheitsprogramm.</p>
+                    </div>
+                    <hr>
+                    <div class="carditem-footer">
+                    	<a href="#" title="title" target="_blank">Mehr Informationen <i class="fa fa-chevron-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- /appetizer -->
+
+<div class="container">
+	<div class="row">
+    	<div class="row">
+        	<div class="col-md-4">
+            	f
             </div>
             <div class="col-md-4">
             	<script>
@@ -121,39 +199,7 @@ if($stunde >="5" AND $stunde <"12"){
             </div>
         </div>
     </div>
-</section>
-<!-- /apps -->
-
-<!-- appetizer -->
-<section id="appetizer">
-	<div class="container">
-    	<div class="row">
-        	<div class="col-md-3">
-            	<div class="carditem">
-                	<img src="images/contentslider/meerwasserschwimmbecken.jpg" class="img-responsive">
-                	<div class="carditem-body">
-                        <h4>Unsere Meerwasserwelt – Einzigartig mit echtem Ostseewasser</h4>
-                        <p>Egal wie turbulent das Wetter draußen an der Küste auch sein mag – in unserem KÜBOMARE können Sie jederzeit indoor in der Ostsee baden! Unsere Schwimmbecken werden mit echtem Ostseewasser gespeist, das in der hauseigenen Filteranlage aufwändig für Sie aufbereitet wird.</p>
-                    </div>
-                    <hr>
-                    <div class="carditem-footer">
-                    	<a href="#" title="title" target="_blank">Mehr Informationen <i class="fa fa-chevron-right"></i></a>
-                    </div>
-                </div>
-            </div>
-        	<div class="col-md-3">
-            	<img src="images/contentslider/strandhotel_restaurant.jpg" class="img-responsive">
-            </div>
-            <div class="col-md-3">
-            	<img src="images/contentslider/kelo-erdsauna.jpg" class="img-responsive">
-            </div>
-            <div class="col-md-3">
-            	<img src="images/contentslider/luftaufnahme.jpg" class="img-responsive">
-            </div>
-        </div>
-    </div>
-</section>
-<!-- /appetizer -->
+</div>
 
 <!-- map -->
 <section id="map">
