--- a/source/index.html
+++ b/source/index.html
@@ -101,12 +101,13 @@ if($stunde >="5" AND $stunde <"12"){
 <section id="apps">
 	<div class="container">
     	<div class="row">
-        	<div class="col-md-4">
+        	<div class="col-sm-4">
             	<img src="images/articles/newsletter-duo_on_ipad.jpg" class="img-responsive">
             </div>
-            <div class="col-md-8">
-            	<h1>Schnäppchen und Last-Minute-Angebote</h1>
-                <p class="lead">In regelmäßigen Abständen informieren wir Sie per E-Mail über aktuelle Angebote, Last-Minute-Aufenthalte und interessante Veränderungen bei den MORADA HOTELS & RESORTS.</p>
+            <div class="col-sm-8">
+            	<h1>Last-Minute-Angebote, Schnäppchen und wertvolle Urlaubstipps</h1>
+                <p class="lead">In regelmäßigen Abständen informieren wir Sie per E-Mail mit unserem Newsletter über aktuelle Angebote, Last-Minute-Aufenthalte und interessante Urlaubstipps für die schönsten Regionen Deutschlands.</p>
+                <a href="http://www.morada.de/infos/newsletter/" target="_blank" title="Kostenlosen Newsletter bestellen" class="btn btn-success btn-lg">Jetzt kostenlos erhalten!</a>
             </div>
         </div>
     </div>
@@ -117,8 +118,8 @@ if($stunde >="5" AND $stunde <"12"){
 <section id="kuebomare">
 	<div class="container">
     	<div class="row">
-        	<div class="col-md-6">
-            	<h1>Besuchen Sie unsere Wellnesswelt im Strandhotel.</h1>
+        	<div class="col-sm-6">
+            	<h1>KÜBOMARE &ndash; Besuchen Sie unsere Sauna- und Wellneswelt</h1>
                 <p class="lead">Sie wollen neue Kraft tanken, sich verwöhnen lassen, Körper und Seele eine Auszeit gönnen? Auf großzügigen 3.000 m² haben Sie in unserem Strandhotel auf vielfältige Art und Weise Gelegenheit dazu: Entdecken Sie unsere einmalige MORADA Wellnesswelt mit einer abwechslungsreichen Saunalandschaft, einem modernen Fitnessbereich, lassen Sie sich im Báltico Spa mit Massagen und Beautyanwendungen verwöhnen oder tauchen Sie in unserer Meerwasserwelt in echtes Ostseewasser ein – einzigartig in ganz Kühlungsborn!</p>
             </div>
         </div>
