--- a/source/index.html
+++ b/source/index.html
@@ -140,7 +140,7 @@ if($stunde >="5" AND $stunde <"12"){
                     </div>
                     <hr>
                     <div class="carditem-footer">
-                    	<a href="#" title="title" target="_blank">Mehr Informationen <i class="fa fa-chevron-right"></i></a>
+                    	<a href="http://www.strandhotel-kuehlungsborn.de/wellness/meerwasserschwimmhalle.php" title="Meerwasserwelt" target="_blank">Mehr Informationen <i class="fa fa-chevron-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -153,7 +153,7 @@ if($stunde >="5" AND $stunde <"12"){
                     </div>
                     <hr>
                     <div class="carditem-footer">
-                    	<a href="#" title="title" target="_blank">Mehr Informationen <i class="fa fa-chevron-right"></i></a>
+                    	<a href="http://www.strandhotel-kuehlungsborn.de/wellness/saunalandschaft.php" title="Saunawelt" target="_blank">Mehr Informationen <i class="fa fa-chevron-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -166,7 +166,7 @@ if($stunde >="5" AND $stunde <"12"){
                     </div>
                     <hr>
                     <div class="carditem-footer">
-                    	<a href="#" title="title" target="_blank">Mehr Informationen <i class="fa fa-chevron-right"></i></a>
+                    	<a href="http://www.strandhotel-kuehlungsborn.de/wellness/baltico-spa.php" title="Báltico Spa" target="_blank">Mehr Informationen <i class="fa fa-chevron-right"></i></a>
                     </div>
                 </div>
             </div>
