--- a/source/index.html
+++ b/source/index.html
@@ -10,12 +10,12 @@
     <meta name="robots" content="noindex, nofollow">
  
     <!-- core css -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Playfair+Display|Roboto:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto:300,400" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
     
     <!-- custom css -->
-	<link href="assets/css/style.css" rel="stylesheet">
+	<link href="assets/css/style.min.css" rel="stylesheet">
     
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -181,11 +181,11 @@ $jetztzeit = time();
                             <img src="https://www.morada.de/livebilder/livebildpos1_640.jpg?r=' .$jetztzeit. '" name="webcambild" alt="" class="img-responsive center-block">
                         </p>
                         <p class="text-center">
-                            <a href="javascript:reloadCam1()" title="Genießen Sie die Kameraposition 1 unserer Webcam vom Hotel an der Ostsee in Kühlungsborn." class="btn btn-success"><i class="fa fa-camera"></i> 1</a>
-                            <a href="javascript:reloadCam2()" title="Genießen Sie die Kameraposition 2 unserer Webcam vom Hotel an der Ostsee in Kühlungsborn." class="btn btn-success"><i class="fa fa-camera"></i> 2</a>
-                            <a href="javascript:reloadCam3()" title="Genießen Sie die Kameraposition 3 unserer Webcam vom Hotel an der Ostsee in Kühlungsborn." class="btn btn-success"><i class="fa fa-camera"></i> 3</a>
-                            <a href="javascript:reloadCam4()" title="Genießen Sie die Kameraposition 4 unserer Webcam vom Hotel an der Ostsee in Kühlungsborn." class="btn btn-success"><i class="fa fa-camera"></i> 4</a>
-                            <a href="javascript:reloadCam5()" title="Genießen Sie die Kameraposition 5 unserer Webcam vom Hotel an der Ostsee in Kühlungsborn." class="btn btn-success"><i class="fa fa-camera"></i> 5</a>
+                            <a href="javascript:reloadCam1()" title="Genießen Sie die Kameraposition 1 unserer Webcam vom Hotel an der Ostsee in Kühlungsborn." class="btn btn-default"><i class="fa fa-camera"></i> 1</a>
+                            <a href="javascript:reloadCam2()" title="Genießen Sie die Kameraposition 2 unserer Webcam vom Hotel an der Ostsee in Kühlungsborn." class="btn btn-default"><i class="fa fa-camera"></i> 2</a>
+                            <a href="javascript:reloadCam3()" title="Genießen Sie die Kameraposition 3 unserer Webcam vom Hotel an der Ostsee in Kühlungsborn." class="btn btn-default"><i class="fa fa-camera"></i> 3</a>
+                            <a href="javascript:reloadCam4()" title="Genießen Sie die Kameraposition 4 unserer Webcam vom Hotel an der Ostsee in Kühlungsborn." class="btn btn-default"><i class="fa fa-camera"></i> 4</a>
+                            <a href="javascript:reloadCam5()" title="Genießen Sie die Kameraposition 5 unserer Webcam vom Hotel an der Ostsee in Kühlungsborn." class="btn btn-default"><i class="fa fa-camera"></i> 5</a>
                         </p>
                         <script>
                             function reloadCam1(){window.document.images.webcambild.src=pos1.src}function reloadCam2(){window.document.images.webcambild.src=pos2.src}function reloadCam3(){window.document.images.webcambild.src=pos3.src}function reloadCam4(){window.document.images.webcambild.src=pos4.src}function reloadCam5(){window.document.images.webcambild.src=pos5.src}pos1=new Image,pos1.src="https://www.morada.de/livebilder/livebildpos1_640.jpg?.r=<?php echo $jetztzeit ?>",pos2=new Image,pos2.src="https://www.morada.de/livebilder/livebildpos2_640.jpg?r=<?php echo $jetztzeit ?>",pos3=new Image,pos3.src="https://www.morada.de/livebilder/livebildpos3_640.jpg?r=<?php echo $jetztzeit ?>",pos4=new Image,pos4.src="https://www.morada.de/livebilder/livebildpos4_640.jpg?r=<?php echo $jetztzeit ?>",pos5=new Image,pos5.src="https://www.morada.de/livebilder/livebildpos5_640.jpg?r=<?php echo $jetztzeit ?>";
@@ -248,22 +248,30 @@ $jetztzeit = time();
 	<div class="container-fluid">
     	<div class="row">
         	<div class="col-xs-12">
-            	<!-- google maps -->
 				<div id="tripmap"></div>
-                <!-- /google maps -->
             </div>
         </div>
     </div>
 </section>
 <!-- /map -->
 
+<footer>
+	<div class="container">
+    	<div class="row">
+        	<div class="col-xs-12 text-center">
+            	<p><small>&copy; <?php echo date("Y"); ?> MORADA Hotels &amp; Resorts</small></p>
+            </div>
+        </div>
+    </div>
+</footer>
+
 <!-- javascript -->
 <script src="assets/js/jquery-1.11.3.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
 <script src="assets/js/jquery.simpleWeather.min.js"></script>
 <script src="https://maps.google.com/maps/api/js?v=3&sensor=false" type="text/javascript"></script>
-<script src="assets/js/markerwithlabel.js"></script>
-<script src="assets/js/script.js"></script>
+<script src="assets/js/markerwithlabel.min.js"></script>
+<script src="assets/js/script.min.js"></script>
 
 </body>
 </html>
