--- a/source/14a/index.html
+++ b/source/14a/index.html
@@ -11,11 +11,11 @@
  
     <!-- core css -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto:300,400" rel="stylesheet">
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+	<link href="../assets/css/font-awesome.min.css" rel="stylesheet">
     
     <!-- custom css -->
-	<link href="assets/css/style.min.css" rel="stylesheet">
+	<link href="../assets/css/style.min.css" rel="stylesheet">
     
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -96,7 +96,7 @@ $jetztzeit = time();
 	<div class="container">
     	<div class="row">
         	<div class="col-sm-4">
-            	<img src="images/articles/newsletter-duo_on_ipad.jpg" class="img-responsive">
+            	<img src="../images/articles/newsletter-duo_on_ipad.jpg" class="img-responsive">
             </div>
             <div class="col-sm-8">
             	<h1>Last-Minute-Angebote, Schnäppchen und wertvolle Urlaubstipps</h1>
@@ -127,7 +127,7 @@ $jetztzeit = time();
     	<div class="row">
         	<div class="col-md-4">
             	<div class="carditem">
-                	<img src="images/contentslider/meerwasserschwimmbecken.jpg" class="img-responsive">
+                	<img src="../images/contentslider/meerwasserschwimmbecken.jpg" class="img-responsive">
                 	<div class="carditem-body">
                         <h4>Unsere Meerwasserwelt – Das Herzstück unseres Wellnessbereichs</h4>
                         <p>Schwimmen in der Ostsee – indoor und bei jedem Wetter! Als einziges Hotel in ganz Kühlungsborn bieten wir Ihnen mit unserem einzigartigen KÜBOMARE ein Badeerlebnis der Extraklasse. In einem aufwändigen Filterverfahren wird unser Becken mit echtem Ostseewasser gespeist.</p>
@@ -140,7 +140,7 @@ $jetztzeit = time();
             </div>
         	<div class="col-md-4">
             	<div class="carditem">
-                	<img src="images/contentslider/kelo-erdsauna.jpg" class="img-responsive">
+                	<img src="../images/contentslider/kelo-erdsauna.jpg" class="img-responsive">
                 	<div class="carditem-body">
                         <h4>Unsere Saunawelt - Entspannung pur im KÜBOMARE</h4>
                         <p>Mit dem KÜBOMARE bieten wir Ihnen eine einzigartige Wellnessoase: Sieben verschiedene Saunen – fünf im Innen- und weitere zwei im Außenbereich – sorgen für optimale Entspannung und Ruhe. Gönnen Sie Ihrem Körper und ihrer Seele eine Auszeit. An unserer Saunabar können Sie sich zudem erfrischen.</p>
@@ -153,7 +153,7 @@ $jetztzeit = time();
             </div>
             <div class="col-md-4">
             	<div class="carditem">
-                	<img src="images/articles/kuebomare_massage.jpg" class="img-responsive">
+                	<img src="../images/articles/kuebomare_massage.jpg" class="img-responsive">
                 	<div class="carditem-body">
                         <h4>Unser Báltico Spa - Lassen Sie sich professionell verwöhnen</h4>
                         <p>Was wäre ein Wellness Hotel ohne Massagen und Beautyanwendungen? In unserem Báltico Spa stehen Ihnen professionelle Kosmetikerinnen und Masseure für vielfältige Entspannungsbehandlungen zur Verfügung. Genießen Sie in angenehmer Atmosphäre zu sanften Klängen ein umfangreiches Verwöhn- und Schönheitsprogramm.</p>
@@ -266,22 +266,12 @@ $jetztzeit = time();
 </footer>
 
 <!-- javascript -->
-<script src="assets/js/jquery-1.11.3.min.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
-<script src="assets/js/jquery.simpleWeather.min.js"></script>
+<script src="../assets/js/jquery-1.11.3.min.js"></script>
+<script src="../assets/js/bootstrap.min.js"></script>
+<script src="../assets/js/jquery.simpleWeather.min.js"></script>
 <script src="https://maps.google.com/maps/api/js?v=3&sensor=false" type="text/javascript"></script>
-<script src="assets/js/markerwithlabel.min.js"></script>
-<script src="assets/js/script.min.js"></script>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-2545117-5', 'auto');
-  ga('send', 'pageview');
-</script>
+<script src="../assets/js/markerwithlabel.min.js"></script>
+<script src="../assets/js/script.min.js"></script>
 
 </body>
 </html>
