--- a/source/14a/index.html
+++ b/source/14a/index.html
@@ -96,12 +96,13 @@ $jetztzeit = time();
 	<div class="container">
     	<div class="row">
         	<div class="col-sm-4">
-            	<img src="../images/articles/newsletter-duo_on_ipad.jpg" class="img-responsive">
+            	<img src="../images/articles/newsletter_on_ipad.jpg" class="img-responsive">
             </div>
             <div class="col-sm-8">
-            	<h1>Last-Minute-Angebote, Schnäppchen und wertvolle Urlaubstipps</h1>
-                <p class="lead">In regelmäßigen Abständen informieren wir Sie per E-Mail mit unserem Newsletter über aktuelle Angebote, Last-Minute-Aufenthalte und interessante Urlaubstipps für die schönsten Regionen Deutschlands.</p>
-                <a href="http://www.morada.de/infos/newsletter/" target="_blank" title="Kostenlosen Newsletter bestellen" class="btn btn-success btn-lg">Jetzt kostenlos erhalten!</a>
+            	<h1>Last-Minute-Angebote, exklusive Schnäppchen und wertvolle Urlaubstipps</h1>
+                <p class="lead">In regelmäßigen Abständen informieren wir Sie per E-Mail mit unserem Newsletter über exklusive Reisengebote, Last-Minute-Aufenthalte und interessante Urlaubstipps rund um Ihr Strandhotel in Kühlungsborn.</p>
+                <p class="lead">Bestellen auch Sie Ihr persönliches Exemplar kostenfrei und unverbindlich!</p>
+                <p><a href="https://www.strandhotel-kuehlungsborn.de/service/newsletter.php" target="_blank" title="Kostenlosen Newsletter bestellen" class="btn btn-success btn-lg">Jetzt kostenlos bestellen!</a></p>
             </div>
         </div>
     </div>
@@ -115,6 +116,7 @@ $jetztzeit = time();
         	<div class="col-sm-6">
             	<h1>KÜBOMARE &ndash; Besuchen Sie unsere Sauna- und Wellneswelt</h1>
                 <p class="lead">Sie wollen neue Kraft tanken, sich verwöhnen lassen, Körper und Seele eine Auszeit gönnen? Auf großzügigen 3.000 m² haben Sie in unserem Strandhotel auf vielfältige Art und Weise Gelegenheit dazu: Entdecken Sie unsere einmalige MORADA Wellnesswelt mit einer abwechslungsreichen Saunalandschaft, einem modernen Fitnessbereich, lassen Sie sich im Báltico Spa mit Massagen und Beautyanwendungen verwöhnen oder tauchen Sie in unserer Meerwasserwelt in echtes Ostseewasser ein – einzigartig in ganz Kühlungsborn!</p>
+                <p class="text-right"><a href="https://www.strandhotel-kuehlungsborn.de/hotel/wellness/wellness.php" target="_blank" title="Herzlich willkommen in unserer Wellnesswelt" class="btn btn-primary btn-lg">Mehr Informationen &hellip;</a></p>
             </div>
         </div>
     </div>
