--- a/source/14a/index.html
+++ b/source/14a/index.html
@@ -131,25 +131,12 @@ $jetztzeit = time();
             	<div class="carditem">
                 	<img src="../images/contentslider/meerwasserschwimmbecken.jpg" class="img-responsive">
                 	<div class="carditem-body">
-                        <h4>Unsere Meerwasserwelt – Das Herzstück unseres Wellnessbereichs</h4>
-                        <p>Schwimmen in der Ostsee – indoor und bei jedem Wetter! Als einziges Hotel in ganz Kühlungsborn bieten wir Ihnen mit unserem einzigartigen KÜBOMARE ein Badeerlebnis der Extraklasse. In einem aufwändigen Filterverfahren wird unser Becken mit echtem Ostseewasser gespeist.</p>
+                      <h4>Genuss mit Weitblick</h4>
+                        <p>Wie könnte man den Tag besser starten, als mit einem üppigen Frühstück bei Sonnenaufgang? Von süßen Leckereien bis hin zu herzhaften Fischspezialitäten bieten wir Ihnen alles, wonach Ihnen der Sinn steht. Und auch das Abendessen ist mehr als nur ein kulinarischer Genuss! Je nach Auswahl des Küchenchefs erwarten Sie abwechslungsreiche 3-Gänge-Menüs oder kreative Themenbuffets &ndash; immer exklusiv: Der einzigartige, uneingeschränkte Panorama-Blick auf die atemberaubende Ostsee.</p>
                     </div>
                     <hr>
                     <div class="carditem-footer">
-                    	<a href="http://www.strandhotel-kuehlungsborn.de/wellness/meerwasserschwimmhalle.php" title="Meerwasserwelt" target="_blank">Mehr Informationen <i class="fa fa-chevron-right"></i></a>
-                    </div>
-                </div>
-            </div>
-        	<div class="col-md-4">
-            	<div class="carditem">
-                	<img src="../images/contentslider/kelo-erdsauna.jpg" class="img-responsive">
-                	<div class="carditem-body">
-                        <h4>Unsere Saunawelt - Entspannung pur im KÜBOMARE</h4>
-                        <p>Mit dem KÜBOMARE bieten wir Ihnen eine einzigartige Wellnessoase: Sieben verschiedene Saunen – fünf im Innen- und weitere zwei im Außenbereich – sorgen für optimale Entspannung und Ruhe. Gönnen Sie Ihrem Körper und ihrer Seele eine Auszeit. An unserer Saunabar können Sie sich zudem erfrischen.</p>
-                    </div>
-                    <hr>
-                    <div class="carditem-footer">
-                    	<a href="http://www.strandhotel-kuehlungsborn.de/wellness/saunalandschaft.php" title="Saunawelt" target="_blank">Mehr Informationen <i class="fa fa-chevron-right"></i></a>
+                    	<a href="https://www.strandhotel-kuehlungsborn.de/hotel/meerblick/restaurant.php" title="Unser Restaurant" target="_blank">Mehr Informationen <i class="fa fa-chevron-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -157,12 +144,25 @@ $jetztzeit = time();
             	<div class="carditem">
                 	<img src="../images/articles/kuebomare_massage.jpg" class="img-responsive">
                 	<div class="carditem-body">
-                        <h4>Unser Báltico Spa - Lassen Sie sich professionell verwöhnen</h4>
-                        <p>Was wäre ein Wellness Hotel ohne Massagen und Beautyanwendungen? In unserem Báltico Spa stehen Ihnen professionelle Kosmetikerinnen und Masseure für vielfältige Entspannungsbehandlungen zur Verfügung. Genießen Sie in angenehmer Atmosphäre zu sanften Klängen ein umfangreiches Verwöhn- und Schönheitsprogramm.</p>
+                        <h4>Köstliche Cocktails, Meerblick inklusive</h4>
+                        <p>Sie sehnen sich nach einem gemütlichen Ausklang an einem stürmischen Tag? Dann bietet Ihnen unsere Hotelbar genau das richtige Ambiente. Wählen Sie aus unserer umfangreichen Karte mit verschiedenen Weinen, Drinks, Cocktails sowie Heißgetränken und genießen Sie stilvoll direkt an der Bar oder in den klassischen Loungesesseln &ndash; und das natürlich nicht nur abends, sondern den ganzen Tag: Erleben Sie das eigenwillige Treiben der Ostsee, ganz entspannt bei einem gepflegten Drink.</p>
                     </div>
                     <hr>
                     <div class="carditem-footer">
-                    	<a href="http://www.strandhotel-kuehlungsborn.de/wellness/baltico-spa.php" title="Báltico Spa" target="_blank">Mehr Informationen <i class="fa fa-chevron-right"></i></a>
+                    	<a href="https://www.strandhotel-kuehlungsborn.de/hotel/meerblick/hotelbar.php" title="Unsere Hotelbar" target="_blank">Mehr Informationen <i class="fa fa-chevron-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        	<div class="col-md-4">
+            	<div class="carditem">
+                	<img src="../images/contentslider/kelo-erdsauna.jpg" class="img-responsive">
+                	<div class="carditem-body">
+                        <h4>Über den Dächern Kühlungsborns</h4>
+                        <p>Sie möchten nach einem ereignisreichen Tag genüsslich die letzten Sonnenstrahlen des Abends genießen? Oder an einem warmen Nachmittag einfach nur die Seele baumeln lassen? Auf unserer loungigen Sonnenterrasse erleben Sie einen unvergesslichen Rundum-Blick – mit Sicht auf die Ostsee und den Yachthafen auf der einen, und in den idyllischen Ort auf der anderen Seite. Der gläserne Windschutz bietet Ihnen auch hoch über den Dächern Kühlungsborns einen angenehmen Aufenthalt.</p>
+                    </div>
+                    <hr>
+                    <div class="carditem-footer">
+                    	<a href="https://www.strandhotel-kuehlungsborn.de/hotel/meerblick/dachterrasse.php" title="Unsere Dachterrasse" target="_blank">Mehr Informationen <i class="fa fa-chevron-right"></i></a>
                     </div>
                 </div>
             </div>
