--- a/source/14a/index.html
+++ b/source/14a/index.html
@@ -16,6 +16,7 @@
     
     <!-- custom css -->
 	<link href="../assets/css/style.min.css" rel="stylesheet">
+    <link href="../assets/css/strandhotel.css" rel="stylesheet">
     
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -123,53 +124,49 @@ $jetztzeit = time();
 </section>
 <!-- /kuebomare -->
 
-<!-- appetizer -->
-<section id="appetizer">
+<!-- panorama-etage -->
+<section>
 	<div class="container">
     	<div class="row">
-        	<div class="col-md-4">
-            	<div class="carditem">
-                	<img src="../images/contentslider/meerwasserschwimmbecken.jpg" class="img-responsive">
-                	<div class="carditem-body">
-                      <h4>Genuss mit Weitblick</h4>
-                        <p>Wie könnte man den Tag besser starten, als mit einem üppigen Frühstück bei Sonnenaufgang? Von süßen Leckereien bis hin zu herzhaften Fischspezialitäten bieten wir Ihnen alles, wonach Ihnen der Sinn steht. Und auch das Abendessen ist mehr als nur ein kulinarischer Genuss! Je nach Auswahl des Küchenchefs erwarten Sie abwechslungsreiche 3-Gänge-Menüs oder kreative Themenbuffets &ndash; immer exklusiv: Der einzigartige, uneingeschränkte Panorama-Blick auf die atemberaubende Ostsee.</p>
-                    </div>
-                    <hr>
-                    <div class="carditem-footer">
-                    	<a href="https://www.strandhotel-kuehlungsborn.de/hotel/meerblick/restaurant.php" title="Unser Restaurant" target="_blank">Mehr Informationen <i class="fa fa-chevron-right"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-            	<div class="carditem">
-                	<img src="../images/articles/kuebomare_massage.jpg" class="img-responsive">
-                	<div class="carditem-body">
-                        <h4>Köstliche Cocktails, Meerblick inklusive</h4>
-                        <p>Sie sehnen sich nach einem gemütlichen Ausklang an einem stürmischen Tag? Dann bietet Ihnen unsere Hotelbar genau das richtige Ambiente. Wählen Sie aus unserer umfangreichen Karte mit verschiedenen Weinen, Drinks, Cocktails sowie Heißgetränken und genießen Sie stilvoll direkt an der Bar oder in den klassischen Loungesesseln &ndash; und das natürlich nicht nur abends, sondern den ganzen Tag: Erleben Sie das eigenwillige Treiben der Ostsee, ganz entspannt bei einem gepflegten Drink.</p>
-                    </div>
-                    <hr>
-                    <div class="carditem-footer">
-                    	<a href="https://www.strandhotel-kuehlungsborn.de/hotel/meerblick/hotelbar.php" title="Unsere Hotelbar" target="_blank">Mehr Informationen <i class="fa fa-chevron-right"></i></a>
-                    </div>
-                </div>
-            </div>
-        	<div class="col-md-4">
-            	<div class="carditem">
-                	<img src="../images/contentslider/kelo-erdsauna.jpg" class="img-responsive">
-                	<div class="carditem-body">
-                        <h4>Über den Dächern Kühlungsborns</h4>
-                        <p>Sie möchten nach einem ereignisreichen Tag genüsslich die letzten Sonnenstrahlen des Abends genießen? Oder an einem warmen Nachmittag einfach nur die Seele baumeln lassen? Auf unserer loungigen Sonnenterrasse erleben Sie einen unvergesslichen Rundum-Blick – mit Sicht auf die Ostsee und den Yachthafen auf der einen, und in den idyllischen Ort auf der anderen Seite. Der gläserne Windschutz bietet Ihnen auch hoch über den Dächern Kühlungsborns einen angenehmen Aufenthalt.</p>
-                    </div>
-                    <hr>
-                    <div class="carditem-footer">
-                    	<a href="https://www.strandhotel-kuehlungsborn.de/hotel/meerblick/dachterrasse.php" title="Unsere Dachterrasse" target="_blank">Mehr Informationen <i class="fa fa-chevron-right"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
+			<div class="col-sm-6">
+				<div class="grid-item">
+					<img src="https://www.strandhotel-kuehlungsborn.de/images/panorama-etage/restaurant_800x400.jpg" class="img-responsive wow fadeInUp">
+					<h2 class="text-center">Restaurant</h2>
+					<p class="thin text-justify wow fadeInUp" data-wow-duration="2s">Wie könnte man den Tag besser starten, als mit einem üppigen Frühstück bei Sonnenaufgang? Von süßen Leckereien bis hin zu herzhaften Fischspezialitäten bieten wir Ihnen alles, wonach Ihnen der Sinn steht. Und auch das Abendessen ist mehr als nur ein kulinarischer Genuss! Je nach Auswahl des Küchenchefs erwarten Sie abwechslungsreiche 3-Gänge-Menüs oder kreative Themenbuffets – immer exklusiv: Der einzigartige, uneingeschränkte Panorama-Blick auf die atemberaubende Ostsee.</p>
+					<p class="text-center"><a href="/hotel/meerblick/restaurant.php" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
+				</div>
+			</div>
+			<div class="col-sm-6">
+				<div class="grid-item">
+					<img src="https://www.strandhotel-kuehlungsborn.de/images/panorama-etage/hotelbar_800x400.jpg" class="img-responsive wow fadeInUp">
+					<h2 class="text-center">Hotelbar</h2>
+					<p class="thin text-justify wow fadeInUp" data-wow-duration="2s">Sie sehnen sich nach einem gemütlichen Ausklang an einem stürmischen Tag? Dann bietet Ihnen unsere Hotelbar genau das richtige Ambiente. Wählen Sie aus unserer umfangreichen Karte mit verschiedenen Weinen, Drinks, Cocktails sowie Heißgetränken und genießen Sie stilvoll direkt an der Bar oder in den klassischen Loungesesseln – und das natürlich nicht nur abends, sondern den ganzen Tag: Erleben Sie das eigenwillige Treiben der Ostsee, ganz entspannt bei einem gepflegten Drink.</p>
+					<p class="text-center"><a href="/hotel/meerblick/hotelbar.php" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
+				</div>
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="col-sm-6">
+				<div class="grid-item">
+					<img src="https://www.strandhotel-kuehlungsborn.de/images/panorama-etage/raucherlounge_800x400.jpg" class="img-responsive wow fadeInUp">
+					<h2 class="text-center">Raucher-Lounge</h2>
+					<p class="thin text-justify wow fadeInUp" data-wow-duration="2s">Zu einem alten Scotch gehört traditionell eine edle kubanische Zigarre. Raucher müssen in unserem Strandhotel keineswegs auf ihren Tabakgenuss verzichten. Unsere stilvolle Raucher-Lounge mit ihren ledernen Loungesesseln bietet Ihnen nicht nur das unvergleichliche Flair einer Szenerie der goldenen 20er gleich, auch sie befindet sich in unserer exklusiven Panorama-Etage, so dass Sie während einer entspannten Raucherpause den unvergleichlichen Blick auf die Ostsee genießen können.</p>
+					<p class="text-center"><a href="/hotel/meerblick/raucherlounge.php" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
+				</div>
+			</div>
+			<div class="col-sm-6">
+				<div class="grid-item">
+					<img src="https://www.strandhotel-kuehlungsborn.de/images/panorama-etage/dachterrasse_800x400.jpg" class="img-responsive wow fadeInUp">
+					<h2 class="text-center">Sonnenterrasse</h2>
+					<p class="thin text-justify wow fadeInUp" data-wow-duration="2s">Sie möchten nach einem ereignisreichen Tag genüsslich die letzten Sonnenstrahlen des Abends genießen? Oder an einem warmen Nachmittag einfach nur die Seele baumeln lassen? Auf unserer loungigen Sonnenterrasse erleben Sie einen unvergesslichen Rundum-Blick – mit Sicht auf die Ostsee und den Yachthafen auf der einen, und in den idyllischen Ort auf der anderen Seite. Der gläserne Windschutz bietet Ihnen auch hoch über den Dächern Kühlungsborns einen angenehmen Aufenthalt.</p>
+					<p class="text-center"><a href="/hotel/meerblick/dachterrasse.php" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
+				</div>
+			</div>
+		</div>
     </div>
 </section>
-<!-- /appetizer -->
+<!-- /panorama-etage -->
 
 <!-- apps -->
 <section id="apps">
