--- a/source/14a/index.html
+++ b/source/14a/index.html
@@ -117,7 +117,7 @@ $jetztzeit = time();
         	<div class="col-sm-6">
             	<h1>KÜBOMARE &ndash; Besuchen Sie unsere Sauna- und Wellneswelt</h1>
                 <p class="lead">Sie wollen neue Kraft tanken, sich verwöhnen lassen, Körper und Seele eine Auszeit gönnen? Auf großzügigen 3.000 m² haben Sie in unserem Strandhotel auf vielfältige Art und Weise Gelegenheit dazu: Entdecken Sie unsere einmalige MORADA Wellnesswelt mit einer abwechslungsreichen Saunalandschaft, einem modernen Fitnessbereich, lassen Sie sich im Báltico Spa mit Massagen und Beautyanwendungen verwöhnen oder tauchen Sie in unserer Meerwasserwelt in echtes Ostseewasser ein – einzigartig in ganz Kühlungsborn!</p>
-                <p class="text-right"><a href="https://www.strandhotel-kuehlungsborn.de/hotel/wellness/wellness.php" target="_blank" title="Herzlich willkommen in unserer Wellnesswelt" class="btn btn-primary btn-lg">Mehr Informationen &hellip;</a></p>
+                <p class="text-right"><a href="https://www.strandhotel-kuehlungsborn.de/hotel/wellness/wellness.php" target="_blank" title="Herzlich willkommen in unserer Wellnesswelt" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
             </div>
         </div>
     </div>
@@ -125,45 +125,50 @@ $jetztzeit = time();
 <!-- /kuebomare -->
 
 <!-- panorama-etage -->
-<section>
+<section id="panorama-etage">
 	<div class="container">
     	<div class="row">
-			<div class="col-sm-6">
-				<div class="grid-item">
-					<img src="https://www.strandhotel-kuehlungsborn.de/images/panorama-etage/restaurant_800x400.jpg" class="img-responsive wow fadeInUp">
-					<h2 class="text-center">Restaurant</h2>
-					<p class="thin text-justify wow fadeInUp" data-wow-duration="2s">Wie könnte man den Tag besser starten, als mit einem üppigen Frühstück bei Sonnenaufgang? Von süßen Leckereien bis hin zu herzhaften Fischspezialitäten bieten wir Ihnen alles, wonach Ihnen der Sinn steht. Und auch das Abendessen ist mehr als nur ein kulinarischer Genuss! Je nach Auswahl des Küchenchefs erwarten Sie abwechslungsreiche 3-Gänge-Menüs oder kreative Themenbuffets – immer exklusiv: Der einzigartige, uneingeschränkte Panorama-Blick auf die atemberaubende Ostsee.</p>
-					<p class="text-center"><a href="/hotel/meerblick/restaurant.php" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="grid-item">
-					<img src="https://www.strandhotel-kuehlungsborn.de/images/panorama-etage/hotelbar_800x400.jpg" class="img-responsive wow fadeInUp">
-					<h2 class="text-center">Hotelbar</h2>
-					<p class="thin text-justify wow fadeInUp" data-wow-duration="2s">Sie sehnen sich nach einem gemütlichen Ausklang an einem stürmischen Tag? Dann bietet Ihnen unsere Hotelbar genau das richtige Ambiente. Wählen Sie aus unserer umfangreichen Karte mit verschiedenen Weinen, Drinks, Cocktails sowie Heißgetränken und genießen Sie stilvoll direkt an der Bar oder in den klassischen Loungesesseln – und das natürlich nicht nur abends, sondern den ganzen Tag: Erleben Sie das eigenwillige Treiben der Ostsee, ganz entspannt bei einem gepflegten Drink.</p>
-					<p class="text-center"><a href="/hotel/meerblick/hotelbar.php" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
-				</div>
-			</div>
-		</div>
-		
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="grid-item">
-					<img src="https://www.strandhotel-kuehlungsborn.de/images/panorama-etage/raucherlounge_800x400.jpg" class="img-responsive wow fadeInUp">
-					<h2 class="text-center">Raucher-Lounge</h2>
-					<p class="thin text-justify wow fadeInUp" data-wow-duration="2s">Zu einem alten Scotch gehört traditionell eine edle kubanische Zigarre. Raucher müssen in unserem Strandhotel keineswegs auf ihren Tabakgenuss verzichten. Unsere stilvolle Raucher-Lounge mit ihren ledernen Loungesesseln bietet Ihnen nicht nur das unvergleichliche Flair einer Szenerie der goldenen 20er gleich, auch sie befindet sich in unserer exklusiven Panorama-Etage, so dass Sie während einer entspannten Raucherpause den unvergleichlichen Blick auf die Ostsee genießen können.</p>
-					<p class="text-center"><a href="/hotel/meerblick/raucherlounge.php" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="grid-item">
-					<img src="https://www.strandhotel-kuehlungsborn.de/images/panorama-etage/dachterrasse_800x400.jpg" class="img-responsive wow fadeInUp">
-					<h2 class="text-center">Sonnenterrasse</h2>
-					<p class="thin text-justify wow fadeInUp" data-wow-duration="2s">Sie möchten nach einem ereignisreichen Tag genüsslich die letzten Sonnenstrahlen des Abends genießen? Oder an einem warmen Nachmittag einfach nur die Seele baumeln lassen? Auf unserer loungigen Sonnenterrasse erleben Sie einen unvergesslichen Rundum-Blick – mit Sicht auf die Ostsee und den Yachthafen auf der einen, und in den idyllischen Ort auf der anderen Seite. Der gläserne Windschutz bietet Ihnen auch hoch über den Dächern Kühlungsborns einen angenehmen Aufenthalt.</p>
-					<p class="text-center"><a href="/hotel/meerblick/dachterrasse.php" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
-				</div>
-			</div>
-		</div>
+        	<div class="col-md-4">
+            	<img src="../images/articles/14a/restaurant_mit_meerblick.jpg" class="img-responsive">
+            </div>
+        	<div class="col-md-8 grid-item text-center">
+            	<hr>
+            	<h2>Restaurant</h2>
+                <hr>
+                <p>Wie könnte man den Tag besser starten, als mit einem üppigen Frühstück bei Sonnenaufgang? Von süßen Leckereien bis hin zu herzhaften Fischspezialitäten bieten wir Ihnen alles, wonach Ihnen der Sinn steht. Und auch das Abendessen ist mehr als nur ein kulinarischer Genuss! Je nach Auswahl des Küchenchefs erwarten Sie abwechslungsreiche 3-Gänge-Menüs oder kreative Themenbuffets &ndash; immer exklusiv: Der einzigartige, uneingeschränkte Panorama-Blick auf die atemberaubende Ostsee.</p>
+                <hr>
+                <p><a href="/hotel/meerblick/restaurant.php" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+        	<div class="col-md-8 grid-item text-center">
+            	<hr>
+            	<h2>Hotelbar</h2>
+                <hr>
+                <p>Sie sehnen sich nach einem gemütlichen Ausklang an einem stürmischen Tag? Dann bietet Ihnen unsere Hotelbar genau das richtige Ambiente. Wählen Sie aus unserer umfangreichen Karte mit verschiedenen Weinen, Drinks, Cocktails sowie Heißgetränken und genießen Sie stilvoll direkt an der Bar oder in den klassischen Loungesesseln &ndash; und das natürlich nicht nur abends, sondern den ganzen Tag: Erleben Sie das eigenwillige Treiben der Ostsee, ganz entspannt bei einem gepflegten Drink.</p>
+                <hr>
+                <p><a href="/hotel/meerblick/restaurant.php" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
+                <hr>
+            </div>
+            <div class="col-md-4">
+            	<img src="../images/articles/14a/hotelbar.jpg" class="img-responsive">
+            </div>
+        </div>
+        <div class="row">
+        	<div class="col-md-6">
+            	<img src="../images/articles/14a/dachterrasse.jpg" class="img-responsive">
+            </div>
+        	<div class="col-md-6 grid-item text-center">
+            	<hr>
+            	<h2>Sonnenterrasse</h2>
+                <hr>
+                <p>Sie möchten nach einem ereignisreichen Tag genüsslich die letzten Sonnenstrahlen des Abends genießen? Oder an einem warmen Nachmittag einfach nur die Seele baumeln lassen? Auf unserer loungigen Sonnenterrasse erleben Sie einen unvergesslichen Rundum-Blick – mit Sicht auf die Ostsee und den Yachthafen auf der einen, und in den idyllischen Ort auf der anderen Seite. Der gläserne Windschutz bietet Ihnen auch hoch über den Dächern Kühlungsborns einen angenehmen Aufenthalt.</p>
+                <hr>
+                <p><a href="/hotel/meerblick/restaurant.php" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
+                <hr>
+            </div>
+        </div>
     </div>
 </section>
 <!-- /panorama-etage -->
