--- a/source/14a/index.html
+++ b/source/14a/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>MORADA INTERNET HOTSPOT</title>
+    <title>STRANDHOTEL INTERNET HOTSPOT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
  
@@ -143,6 +143,7 @@ $jetztzeit = time();
                 <p class="text-justify">Wie könnte man den Tag besser starten, als mit einem üppigen Frühstück bei Sonnenaufgang? Von süßen Leckereien bis hin zu herzhaften Fischspezialitäten bieten wir Ihnen alles, wonach Ihnen der Sinn steht. Und auch das Abendessen ist mehr als nur ein kulinarischer Genuss! Je nach Auswahl des Küchenchefs erwarten Sie abwechslungsreiche 3-Gänge-Menüs oder kreative Themenbuffets &ndash; immer exklusiv: Der einzigartige, uneingeschränkte Panorama-Blick auf die atemberaubende Ostsee.</p>
                 <hr>
                 <p class="text-center"><a href="https://www.strandhotel-kuehlungsborn.de/hotel/wellness/wellness.php" target="_blank" title="Herzlich willkommen in unserer Wellnesswelt" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
+                <hr>
             </div>
         	<div class="col-md-3 col-sm-6">
                 <img src="../images/articles/14a/hotelbar.jpg" class="img-responsive">
@@ -150,6 +151,7 @@ $jetztzeit = time();
                 <p class="text-justify">Sie sehnen sich nach einem gemütlichen Ausklang an einem stürmischen Tag? Dann bietet Ihnen unsere Hotelbar genau das richtige Ambiente. Wählen Sie aus unserer umfangreichen Karte mit verschiedenen Weinen, Drinks, Cocktails sowie Heißgetränken und genießen Sie stilvoll direkt an der Bar oder in den klassischen Loungesesseln – und das natürlich nicht nur abends, sondern den ganzen Tag: Erleben Sie das eigenwillige Treiben der Ostsee, ganz entspannt bei einem gepflegten Drink.</p>
                 <hr>
                 <p class="text-center"><a href="https://www.strandhotel-kuehlungsborn.de/hotel/wellness/wellness.php" target="_blank" title="Herzlich willkommen in unserer Wellnesswelt" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
+                <hr>
             </div>
             <div class="col-md-3 col-sm-6">
                 <img src="../images/articles/14a/dachterrasse.jpg" class="img-responsive">
@@ -157,6 +159,7 @@ $jetztzeit = time();
                 <p class="text-justify">Sie möchten nach einem ereignisreichen Tag genüsslich die letzten Sonnenstrahlen des Abends genießen? Oder an einem warmen Nachmittag einfach nur die Seele baumeln lassen? Auf unserer loungigen Sonnenterrasse erleben Sie einen unvergesslichen Rundum-Blick – mit Sicht auf die Ostsee und den Yachthafen auf der einen, und in den idyllischen Ort auf der anderen Seite. Der gläserne Windschutz bietet Ihnen auch hoch über den Dächern Kühlungsborns einen angenehmen Aufenthalt.</p>
                 <hr>
                 <p class="text-center"><a href="https://www.strandhotel-kuehlungsborn.de/hotel/wellness/wellness.php" target="_blank" title="Herzlich willkommen in unserer Wellnesswelt" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
+                <hr>
             </div>
             <div class="col-md-3 col-sm-6">
                 <img src="../images/articles/14a/raucherlounge.jpg" class="img-responsive">
@@ -164,6 +167,7 @@ $jetztzeit = time();
                 <p class="text-justify">Zu einem alten Scotch gehört traditionell eine edle kubanische Zigarre. Raucher müssen in unserem Strandhotel keineswegs auf ihren Tabakgenuss verzichten. Unsere stilvolle Raucher-Lounge mit ihren ledernen Loungesesseln bietet Ihnen nicht nur das unvergleichliche Flair einer Szenerie der goldenen 20er gleich, auch sie befindet sich in unserer exklusiven Panorama-Etage, so dass Sie während einer entspannten Raucherpause den unvergleichlichen Blick auf die Ostsee genießen können.</p>
                 <hr>
                 <p class="text-center"><a href="https://www.strandhotel-kuehlungsborn.de/hotel/wellness/wellness.php" target="_blank" title="Herzlich willkommen in unserer Wellnesswelt" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
+                <hr>
             </div>
         </div>
     </div>
@@ -175,7 +179,7 @@ $jetztzeit = time();
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-            	<div class="panel panel-default">
+            	<div class="panel panel-morada">
                 	<div class="panel-heading">Webcam Kühlungsborn</div>
                     <div class="panel-body">
                         <p>
@@ -195,7 +199,7 @@ $jetztzeit = time();
                 </div>
             </div>
             <div class="col-md-4">
-            	<div class="panel panel-default">
+            	<div class="panel panel-morada">
                 	<div class="panel-heading">Aktuelles Wetter</div>
                     <div class="panel-body">
                 		<div id="weather"></div>
@@ -203,7 +207,7 @@ $jetztzeit = time();
                 </div>
             </div>
             <div class="col-md-4">
-            	<div class="panel panel-default">
+            	<div class="panel panel-morada">
                 	<div class="panel-heading">Websuche</div>
                     <div class="panel-body">
                     	<script>
@@ -221,7 +225,7 @@ $jetztzeit = time();
                     </div>
                 </div>
                 
-				<div class="panel panel-default">
+				<div class="panel panel-morada">
                 	<div class="panel-heading">Weitere Informationen</div>
                     <div class="list-group">
                         <a href="http://www.morada.de" target="_blank" class="list-group-item">
