--- a/source/14a/index.html
+++ b/source/14a/index.html
@@ -84,7 +84,7 @@ $jetztzeit = time();
     	<div class="row">
         	<div class="col-xs-12">
             	<div id="keyvisual-element">
-					<div class="keyvisualsteadyhalf"></div>
+					<div class="keyvisualsteadyhalf-stra"></div>
 				</div>
             </div>
         </div>
