--- a/source/14a/index.html
+++ b/source/14a/index.html
@@ -97,7 +97,7 @@ $jetztzeit = time();
 	<div class="container">
     	<div class="row">
         	<div class="col-sm-4">
-            	<img src="../images/articles/newsletter_on_ipad.jpg" class="img-responsive">
+            	<img src="../images/articles/newsletter_on_ipad.jpg" class="img-responsive" alt="Strandhotel Newsletter">
             </div>
             <div class="col-sm-8">
             	<h1>Last-Minute-Angebote, exklusive Schnäppchen und wertvolle Urlaubstipps</h1>
@@ -138,35 +138,35 @@ $jetztzeit = time();
         </div>
     	<div class="row">
         	<div class="col-md-3 col-sm-6">
-                <img src="../images/articles/14a/restaurant_mit_meerblick.jpg" class="img-responsive">
+                <img src="../images/articles/14a/restaurant_mit_meerblick.jpg" class="img-responsive" alt="Genuss mit Weitblick">
                 <h4 class="text-center">Restaurant</h4>
                 <p class="text-justify">Wie könnte man den Tag besser starten, als mit einem üppigen Frühstück bei Sonnenaufgang? Von süßen Leckereien bis hin zu herzhaften Fischspezialitäten bieten wir Ihnen alles, wonach Ihnen der Sinn steht. Und auch das Abendessen ist mehr als nur ein kulinarischer Genuss! Je nach Auswahl des Küchenchefs erwarten Sie abwechslungsreiche 3-Gänge-Menüs oder kreative Themenbuffets &ndash; immer exklusiv: Der einzigartige, uneingeschränkte Panorama-Blick auf die atemberaubende Ostsee.</p>
                 <hr>
-                <p class="text-center"><a href="https://www.strandhotel-kuehlungsborn.de/hotel/wellness/wellness.php" target="_blank" title="Herzlich willkommen in unserer Wellnesswelt" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
+                <p class="text-center"><a href="https://www.strandhotel-kuehlungsborn.de/hotel/meerblick/restaurant.php" target="_blank" title="Genuss mit Weitblick" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
                 <hr>
             </div>
         	<div class="col-md-3 col-sm-6">
-                <img src="../images/articles/14a/hotelbar.jpg" class="img-responsive">
+                <img src="../images/articles/14a/hotelbar.jpg" alt="Köstliche Cocktails, Meerblick inklusive" class="img-responsive">
                 <h4 class="text-center">Hotelbar</h4>
                 <p class="text-justify">Sie sehnen sich nach einem gemütlichen Ausklang an einem stürmischen Tag? Dann bietet Ihnen unsere Hotelbar genau das richtige Ambiente. Wählen Sie aus unserer umfangreichen Karte mit verschiedenen Weinen, Drinks, Cocktails sowie Heißgetränken und genießen Sie stilvoll direkt an der Bar oder in den klassischen Loungesesseln – und das natürlich nicht nur abends, sondern den ganzen Tag: Erleben Sie das eigenwillige Treiben der Ostsee, ganz entspannt bei einem gepflegten Drink.</p>
                 <hr>
-                <p class="text-center"><a href="https://www.strandhotel-kuehlungsborn.de/hotel/wellness/wellness.php" target="_blank" title="Herzlich willkommen in unserer Wellnesswelt" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
+                <p class="text-center"><a href="https://www.strandhotel-kuehlungsborn.de/hotel/meerblick/hotelbar.php" target="_blank" title="Köstliche Cocktails, Meerblick inklusive" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
                 <hr>
             </div>
             <div class="col-md-3 col-sm-6">
-                <img src="../images/articles/14a/dachterrasse.jpg" class="img-responsive">
+                <img src="../images/articles/14a/dachterrasse.jpg" class="img-responsive" alt="Über den Dächern Kühlungsborns">
                 <h4 class="text-center">Sonnenterrasse</h4>
                 <p class="text-justify">Sie möchten nach einem ereignisreichen Tag genüsslich die letzten Sonnenstrahlen des Abends genießen? Oder an einem warmen Nachmittag einfach nur die Seele baumeln lassen? Auf unserer loungigen Sonnenterrasse erleben Sie einen unvergesslichen Rundum-Blick – mit Sicht auf die Ostsee und den Yachthafen auf der einen, und in den idyllischen Ort auf der anderen Seite. Der gläserne Windschutz bietet Ihnen auch hoch über den Dächern Kühlungsborns einen angenehmen Aufenthalt.</p>
                 <hr>
-                <p class="text-center"><a href="https://www.strandhotel-kuehlungsborn.de/hotel/wellness/wellness.php" target="_blank" title="Herzlich willkommen in unserer Wellnesswelt" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
+                <p class="text-center"><a href="https://www.strandhotel-kuehlungsborn.de/hotel/meerblick/dachterrasse.php" target="_blank" title="Über den Dächern Kühlungsborns" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
                 <hr>
             </div>
             <div class="col-md-3 col-sm-6">
-                <img src="../images/articles/14a/raucherlounge.jpg" class="img-responsive">
+                <img src="../images/articles/14a/raucherlounge.jpg" class="img-responsive" alt="Stilvoller Genuss über dem Meer">
                 <h4 class="text-center">Raucherlounge</h4>
                 <p class="text-justify">Zu einem alten Scotch gehört traditionell eine edle kubanische Zigarre. Raucher müssen in unserem Strandhotel keineswegs auf ihren Tabakgenuss verzichten. Unsere stilvolle Raucher-Lounge mit ihren ledernen Loungesesseln bietet Ihnen nicht nur das unvergleichliche Flair einer Szenerie der goldenen 20er gleich, auch sie befindet sich in unserer exklusiven Panorama-Etage, so dass Sie während einer entspannten Raucherpause den unvergleichlichen Blick auf die Ostsee genießen können.</p>
                 <hr>
-                <p class="text-center"><a href="https://www.strandhotel-kuehlungsborn.de/hotel/wellness/wellness.php" target="_blank" title="Herzlich willkommen in unserer Wellnesswelt" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
+                <p class="text-center"><a href="https://www.strandhotel-kuehlungsborn.de/hotel/meerblick/raucherlounge.php" target="_blank" title="Stilvoller Genuss über dem Meer" class="btn btn-sand">Erfahren Sie mehr &hellip;</a></p>
                 <hr>
             </div>
         </div>
